Pango-WARNING **: Invalid UTF-8 string passed to pango_layout_set_text()
This issue was migrated from bug 5738 in our old bug tracker.
Original bug information:
Reporter: oja…@oja…
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: Git
Attachments:
xmpp.cap: test packet
1.cap: Test trace
proto-check-if-valid-utf.patch: Strict checking if string set as representation is valid utf-8
See also:
https://bugzilla.gnome.org/show_bug.cgi?id=668154
Issue #9323 (closed)