The IEEE may not care what's in an SSID but Pango is much more picky. If the SSID isn't valid UTF-8 truncate it and indicate that we did so. (As bug 5738 points out this is part of a more general problem but in the meantime this keeps us from crashing.)

Don't try to decrypt too-long SSIDs.

I feel compelled to change my SSID at home to a series of carriage
returns, linefeeds, and SNOWMAN (U+2603).

svn path=/trunk/; revision=47871